<resources>
    <string name="app_name">tohtobin_pro_41</string>
    <string name="files">Управление файлами</string>
    <string name="file">Имя файла</string>
    <string name="text">Текст файла</string>
    <string name="create">Создать</string>
    <string name="delete">Удалить</string>
    <string name="read">Читать</string>
    <string name="write">Записать</string>
    <string name="ready">Готово</string>
    <string name="list">Доступные файлы</string>
    <string name="play_button">Воспроизвести</string>
    <string name="pause_button">Пауза</string>
    <string name="Photos">Photos</string>
    <string name="Audio">Audio</string>
    <string name="Video">Video</string>
    <string name="stop_button">Стоп</string>
    <string name="hello_blank_fragment">Бланк</string>
    <string name="audio_title">Аудио Плейер</string>
    <string name="song_title">Симфония грез</string>
    <string name="artist_name">Гармония Пейк</string>
    <string name="album_name">Мечта</string>
    <string name="play">Плей</string>
    <string name="pause">Пауза</string>
    <string name="repeat">Повторить</string>
    <string name="volume">Звук</string>
    <string name="playback_speed">Speed</string>
    <string name="equalizer">Equalizer</string>
    <string name="playlist">Playlist</string>
    <string name="favorite">Favorite</string>
    <string name="add_to_playlist">Add to Playlist</string>
    <string name="lyrics">Lyrics</string>
    <string name="current_time">00:00</string>
    <string name="total_time">03:45</string>
    <string name="audio_quality">High Quality • 320 kbps</string>
    <string name="audio_format">FLAC</string>
</resources>