<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="384dp"
    android:layout_height="586dp"
    android:padding="@dimen/spacing_medium">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_start"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.05" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_end"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.95" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_bottom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="1.0" />


    <LinearLayout
        android:id="@+id/layoutSongInfo"
        android:layout_width="311dp"
        android:layout_height="125dp"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:padding="@dimen/spacing_medium"
        app:layout_constraintBottom_toTopOf="@+id/guideline_progress"
        app:layout_constraintEnd_toEndOf="@id/guideline_end"
        app:layout_constraintStart_toStartOf="@id/guideline_start"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0">

        <TextView
            android:id="@+id/textSongTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:maxLines="1"
            android:text="@string/song_title"
            android:textColor="@color/on_background"
            android:textSize="@dimen/text_size_xlarge"
            android:textStyle="bold"
            tools:ignore="HardcodedText" />

        <TextView
            android:id="@+id/textArtistName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing_small"
            android:text="@string/artist_name"
            android:textColor="@color/surface_variant"
            android:textSize="@dimen/text_size_large"
            tools:ignore="HardcodedText" />

        <TextView
            android:id="@+id/textAlbumName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing_small"
            android:text="@string/album_name"
            android:textColor="@color/outline"
            android:textSize="@dimen/text_size_medium"
            tools:ignore="HardcodedText" />

    </LinearLayout>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_progress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.2" />

    <LinearLayout
        android:id="@+id/layoutProgress"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="@id/guideline_end"
        app:layout_constraintStart_toStartOf="@id/guideline_start"
        app:layout_constraintTop_toBottomOf="@id/guideline_progress">

        <TextView
            android:id="@+id/textCurrentTime"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/current_time"
            android:textColor="@color/surface_variant"
            android:textSize="@dimen/text_size_small"
            tools:ignore="HardcodedText" />

        <TextView
            android:id="@+id/textTotalTime"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/total_time"
            android:textColor="@color/surface_variant"
            android:textSize="@dimen/text_size_small"
            android:gravity="end"
            tools:ignore="HardcodedText" />

    </LinearLayout>

    <com.google.android.material.slider.Slider
        android:id="@+id/sliderProgress"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:value="30"
        android:valueFrom="0"
        android:valueTo="100"
        app:layout_constraintEnd_toEndOf="@id/guideline_end"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@id/guideline_start"
        app:layout_constraintTop_toBottomOf="@id/layoutProgress"
        app:thumbColor="@color/primary"
        app:trackColorActive="@color/primary"
        app:trackColorInactive="@color/surface_variant" />

    <LinearLayout
        android:id="@+id/layoutControls"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/guideline_controls_bottom"
        app:layout_constraintEnd_toEndOf="@id/guideline_end"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@id/guideline_start"
        app:layout_constraintTop_toBottomOf="@+id/guideline_controls_top"
        app:layout_constraintVertical_bias="0.194">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/buttonPrevious"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/spacing_large"
            android:minWidth="@dimen/button_size_medium"
            android:minHeight="@dimen/button_size_medium"
            app:backgroundTint="@color/secondary_container"
            app:icon="@drawable/ic_skip_previous"
            app:iconTint="@color/on_secondary_container" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/buttonNext"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/spacing_large"
            android:minWidth="@dimen/button_size_medium"
            android:minHeight="@dimen/button_size_medium"
            app:backgroundTint="@color/secondary_container"
            app:icon="@drawable/ic_skip_next"
            app:iconTint="@color/on_secondary_container" />

    </LinearLayout>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_controls_top"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="197dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_controls_bottom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.5" />

    <LinearLayout
        android:id="@+id/layoutVolume"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@id/guideline_bottom"
        app:layout_constraintEnd_toEndOf="@id/guideline_end"
        app:layout_constraintStart_toStartOf="@id/guideline_start"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/imageVolumeLow"
            android:layout_width="@dimen/icon_size_small"
            android:layout_height="@dimen/icon_size_small"
            android:layout_marginEnd="@dimen/spacing_small"
            android:src="@drawable/ic_volume_down"
            app:tint="@color/outline" />

        <com.google.android.material.slider.Slider
            android:id="@+id/sliderVolume"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:value="70"
            android:valueFrom="0"
            android:valueTo="100"
            app:thumbColor="@color/secondary"
            app:trackColorActive="@color/secondary"
            app:trackColorInactive="@color/surface_variant" />

        <ImageView
            android:id="@+id/imageVolumeHigh"
            android:layout_width="@dimen/icon_size_small"
            android:layout_height="@dimen/icon_size_small"
            android:layout_marginStart="@dimen/spacing_small"
            android:src="@drawable/ic_volume_up"
            app:tint="@color/outline" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>